# aoc2023

./: CMakeLists.txt  main.c
lib/: 01.c  01.h  02.c  02.h  03.c  03.h  lexer.c  lexer.h  messages.c  messages.h  reader.c  reader.h
tests/: CMakeLists.txt  messagesTests.c
